@@ -1,7 +1,7 @@
 {
     "name": "OVN_Southbound",
-    "version": "20.34.0",
-    "cksum": "2786607656 31376",
+    "version": "20.35.0",
+    "cksum": "3665804961 31485",
     "tables": {
         "SB_Global": {
             "columns": {
@@ -113,10 +113,12 @@
                     "type": {"key": "string", "value": "string",
                              "min": 0, "max": "unlimited"}},
                 "controller_meter": {"type": {"key": {"type": "string"},
-                                     "min": 0, "max": 1}},
+                             "min": 0, "max": 1}},
                 "external_ids": {
                     "type": {"key": "string", "value": "string",
-                             "min": 0, "max": "unlimited"}}},
+                             "min": 0, "max": "unlimited"}},
+                "flow_desc": {"type": {"key": {"type": "string"},
+                             "min": 0, "max": 1}}},
             "isRoot": true},
         "Logical_DP_Group": {
             "columns": {
